@@ -13,9 +13,13 @@
       <directory>target/assembly</directory>
       <includes>
         <include>jsr311-api.jar</include>
-        <include>jersey-gf-bundle.jar</include>
+        <include>jersey-core.jar</include>
+        <include>jersey-server.jar</include>
+        <include>jersey-client.jar</include>
+        <include>jersey-json.jar</include>
         <include>jersey-gf-statsproviders.jar</include>
         <include>jersey-multipart.jar</include>
+        <include>asm-all.jar</include>
         <include>jackson-core-asl.jar</include>
         <include>jettison.jar</include>
         <include>mimepull.jar</include>
